# rclonedecrypt

./: .gitignore  Cargo.toml  DECRYPTION_SUCCESS.md  LICENSE  Makefile  README.md  USAGE.md  build-releases.sh  build-windows.sh  build.sh  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cli.rs  decrypt.rs  error.rs  main.rs
