[package]
name = "rclonedecrypt"
version = "0.2.8"
edition = "2024"
authors = ["github.com/mcolatosti", "github.com/pepa65"]
description = "CLI to decrypt rclone-encrypted files"
repository = "https://github.com/pepa65/rclonedecrypt"
documentation = "https://docs.rs/rclonedecrypt"
readme = "README.md"
license = "MIT"
keywords = ["rclone", "decode", "cli"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = { version = "4.0", features = ["cargo", "derive"] }
scrypt = "0.11"
base64 = "0"
hex = "0.4"
anyhow = "1.0"
thiserror = "2.0"
sodiumoxide = "0.2"
